--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -41,8 +41,8 @@ CreateAudioDeviceForEveryPlayer=False
 ClientWindowHeight=480
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
-MultipleInstanceLastHeight=0
-MultipleInstanceLastWidth=0
+MultipleInstanceLastHeight=720
+MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-TT369B9
 LastExecutedLaunchName=DESKTOP-TT369B9
 
@@ -766,10 +766,40 @@ UdpMessagingSettings.Transport=True
 UdpMessagingSettings.Tunnel=True
 WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
+LandscapeEditorObject.New Landscape=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Actor=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Cooking=True
+LandscapeEditorObject.LandscapeEditor=True
+LandscapeEditorObject.Brush Settings=True
+LandscapeEditorObject.Tool Settings=True
+LandscapeEditorObject.Target Layers=True
+LightmassImportanceVolume.TransformCommon=True
+LightmassImportanceVolume.BrushSettings=True
+LightmassImportanceVolume.Actor=True
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object=
+LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -802,5 +832,31 @@ MeshImportExport=../../../../../../rep/BattleTank/BattleTank/Content/
 WorldRoot=../../../../../../rep/BattleTank/BattleTank/Content/
 Level=../../../../../../rep/BattleTank/BattleTank/Content
 Project=C:/Program Files (x86)/Epic Games/4.14/
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
+[LandscapeEdit]
+AlphaBrushAutoRotate=True
+WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
+WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
+WorldSpacePatternBrushSettings.RepeatSize=3200.000000
+bUseFlattenTarget=False
+FlattenTarget=0.000000
+RampWidth=2000.000000
+RampSideFalloff=0.400000
+SmoothFilterKernelSize=4
+MirrorOp=0
+NewLandscapeMaterialName=
+ImportLandscape_AlphamapType=0
+
+[PlacementMode]
+RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_9
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+
+[MessageLog]
+LastLogListing=LightingResults
 
 
